<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dut.note.ui.addNote.AddNewNote">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <com.dut.note.ui.view.ImageStreamView
                android:id="@+id/imageview_add_note"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:visibility="gone"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:background="@color/primary"
                android:maxHeight="200dp"
                android:scaleType="centerCrop" />

            <EditText
                android:id="@+id/add_title_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:background="@null"
                android:hint="@string/title_hint"
                android:paddingTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"
                android:textColor="@color/title_blue"
                android:textColorHint="@color/title_blue"
                android:textSize="@dimen/abc_text_size_large_material"
                android:textStyle="bold" />

            <com.dut.note.ui.view.LinedEditText
                android:id="@+id/add_content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@null" />

            <com.dut.note.ui.nonScrollListview.NonScrollListView
                android:id="@+id/new_node_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null">

            </com.dut.note.ui.nonScrollListview.NonScrollListView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingLeft="70dp">

                <ImageView
                    android:id="@+id/add_item_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginRight="8dp"
                    android:clickable="true"
                    android:onClick="createNewCheckbox"
                    android:src="@drawable/ic_add" />

                <TextView
                    android:id="@+id/add_item_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:onClick="createNewCheckbox"
                    android:text="@string/add_list_hint"
                    android:textSize="@dimen/abc_text_size_medium_material" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/divider" />

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <ImageView
                    android:id="@+id/add_calendar_image"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_calendar" />

                <TextView
                    android:id="@+id/add_note_set_calendar_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:clickable="true"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:text="@string/calendar_hint"
                    android:onClick="setDateTextView"
                    android:padding="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <ImageView
                    android:id="@+id/add_alert_image"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_time" />

                <TextView
                    android:id="@+id/add_note_set_time_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:clickable="true"
                    android:ems="@android:integer/config_longAnimTime"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:onClick="setTimeTextView"
                    android:text="@string/set_time_hint"
                    android:inputType="time"
                    android:padding="12dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_tag" />

                <MultiAutoCompleteTextView
                    android:id="@+id/add_note_set_tag_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:singleLine="true"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:hint="@string/hint_tag"
                    android:completionThreshold="1"
                    android:padding="12dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>